--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.0",
+    "@reduxjs/toolkit": "^2.1.0",
     "antd": "^5.14.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.50.0"
+    "react-hook-form": "^7.50.0",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
