--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.50.0",
     "react-redux": "^9.1.0"
