--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.0",
+    "@faker-js/faker": "^8.4.1",
     "@reduxjs/toolkit": "^2.1.0",
     "antd": "^5.14.0",
     "next": "14.1.0",
