--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.0",
     "@ant-design/nextjs-registry": "^1.0.0",
     "@faker-js/faker": "^8.4.1",
     "@reduxjs/toolkit": "^2.1.0",
